stylesheets.css
/*General*/
* {
    box-sizing: border-box;
    color: white;
    text-decoration: none;
}

body {
    margin: 0;
    padding: 0;
    font-family: Consolas, serif;
    display: flex;
    align-items: flex-start;
    justify-content: center;
}

h1 {
    z-index: 1;
    position: fixed;
    top: 91%;
    right: 1%;
    font-size: 0.3em;
    color: grey;
}
header{
    align-items: center;
    display: flex;
    justify-content: center;
    margin: 1em;
}
.Page{
    display: none;
    flex-flow: column wrap;
    width: 100vw;
    height: 90vh;
    position: fixed;
    background-color: rgba(128,128,128,0);
    justify-content: space-evenly;
    backdrop-filter: blur(4px);
    border-radius: 5px;
    animation-duration: 1s;
    animation-direction: alternate;
    animation-name: slidein ;
}
/*animation slide page*/
@keyframes slidein {
    0%{
        margin-top: 100vh;
    }
    100%{
        margin-top: 0;
    }
}
.Page:nth-child(1){
    display: flex;
}
/*présentation accueil*/
.ligne{
    margin-left: 3%;
    color: white;
    text-align: left;
}
.Page footer{
    align-self: center;
}
.arrow_down{
    color:white;
    font-size: 1.5em;
}
.arrow_down i:hover{
    color: darkgrey;
}
/* Premiere page*/
/*Liens en savoir plus*/

#arrow_downz{
    color: white;
}

.general{
    margin: 0 2em;
}
.iconz{
    display: flex;
    align-items: center;
    margin: 0 0.5em 0 0;
    font-size: 1.5em;
}
/*deuxieme page*/
.description{
    margin: 0 2em;
}
.description:nth-child(2n) i{
    margin: 0.5em;
    font-size: 1.5em;
}
.description:nth-child(2n){
    text-align: center;
}
.Page{
    font-size: 0.85em;
}
.center{
    display: flex;
    justify-content: center;
    align-items: center;
}
.center i{
    margin: 0.5em;
}

/* ---- underline ----*/
/* Underline From Left */
.hvr-underline-from-left {
    float: right;
    margin-top: 5%;
    color: #8AF8FF;
    -webkit-transform: perspective(1px) translateZ(0);
    transform: perspective(1px) translateZ(0);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
    position: relative;
    overflow: hidden;
}
.hvr-underline-from-left div, .hvr-underline-from-left i{
    color:#8AF8FF;
}
.hvr-underline-from-left i{
    font-size: 1.5em;
}

.hvr-underline-from-left:before {
    content: "";
    position: absolute;
    z-index: -1;
    left: 0;
    right: 100%;
    bottom: 0;
    background: #2098D1;
    height: 3px;
    -webkit-transition-property: right;
    transition-property: right;
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;
    -webkit-transition-timing-function: ease-out;
    transition-timing-function: ease-out;
}
.hvr-underline-from-left:hover:before, .hvr-underline-from-left:focus:before, .hvr-underline-from-left:active:before {
    right: 0;
}

/* --- page accueil ---*/
/* ---- particles.js - conteneur ---- */
#particles-js {
    position: fixed;
    height: 100vh;
    width: 100vw;
    background-color: black;
}

/* Carroussel */

#slider figure {
    position: relative;
    width: 600%;
    margin: 0;
    padding: 0;
    font-size: 0;
    text-align: left;
    animation: 21s slidy infinite;
}

#slider figure img {
    width: 16.66%;
    height: auto;
    float: left;
}

#slider figure .carrousselBack:nth-child(1){
    /*<img src="images/cinquinMaeva.png" alt="Site Maeva Cinquin">;*/
    background-image:url("images/cinquinMaeva.png");
}
#slider figure .carrousselBack:nth-child(2){
    /*<img src="images/Conseils.png" alt="Prise note conseil">*/
    background-image:url("images/Conseils.png");
}
#slider figure .carrousselBack:nth-child(3){
    /*<img src="images/Ifrocean.png" alt="Ifrocean Projet php">*/
    background-image:url("images/Ifrocean.png");
}
#slider figure .carrousselBack:nth-child(4){
    /*<img src="images/CinquinAndy.png" alt="Portefolio Andy">*/
    background-image:url("images/CinquinAndy.png");
}
#slider figure .carrousselBack:nth-child(5){
    /*<img src="images/BewSite.png" alt="Projet Bew">*/
    background-image:url("images/BewSite.png");
}
#slider figure .carrousselBack:nth-child(6){
    /*<img src="images/Endar.png" alt="Projet Endar">*/
    background-image:url("images/Endar.png");
}

#slider {
    width: 60%;
    text-align: center;
    overflow: hidden;
    border: solid black 2px;
    border-radius: 7px;
}

#middle {
    display: flex;
    justify-content: center;
    align-items: center;
}


/*Calculé pour 6 Images*/
@keyframes slidy {
    0% {
        left: 0;
    }
    11.66% {
        left: 0;
    }
    16.66% {
        left: -100%;
    }
    28.33% {
        left: -100%;
    }
    33.33%{
        left: -200%;
    }
    45% {
        left: -200%;
    }
    50% {
        left: -300%;
    }
    61.66% {
        left: -300%;
    }
    66.66% {
        left: -400%;
    }
    78.33% {
        left: -400%;
    }
    83.33% {
        left: -500%;
    }
    95.00% {
        left: -500%;
    }
    100% {
        left: 0;
    }
}

.hvr-grow {
    display: inline-block;
    vertical-align: middle;
    -webkit-transform: perspective(1px) translateZ(0);
    transform: perspective(1px) translateZ(0);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;
    -webkit-transition-property: transform;
    transition-property: transform;
}
.hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
    -webkit-transform: scale(1.1);
    transform: scale(1.1);
}
#boxtimeline{
    display: flex;
    flex-flow: wrap;
    width: 100%;
    height: 100%;
}
#htimeline{
    display: flex;
    width: 100%;
}
#ftimeline{
    display: flex;
    width: 100%;
    justify-content: center;
}
.timeline{
    display: flex;
    background: linear-gradient(45deg, rgba(138, 248, 255, 0) 10%, rgba(138, 248, 255, 0.8) 70%);
    border: 1px solid #8AF8FF;
    border-radius: 20px;
    margin: 0 1.5em;
    width: 5%;
}
.timelinetext{
    display: flex;
    flex-direction: column;
    width: 80%;
    justify-content: space-evenly;
}
.timelinetext article{
    margin: 0 1em 1em 0;
    justify-content: left;
}


/*experiences*/
.experience i{
    margin: 0 0.5em;
    font-size: 1.5em;
}
.experience svg{
    margin: 0 0.5em;
}
.titreExperience{
    width: 100%;
    text-align: center;
}
.loadingbar{
    display: flex;
    border: 1px solid #8AF8FF;
    border-radius: 20px;
    width: 75%;
    height: 15px;
    margin: 0 1em 0 0.5em;
}
/*html*/
.experience:nth-child(3) .loadingbar{
    background: linear-gradient(-45deg, rgba(138, 248, 255, 0) 10%, rgba(138, 248, 255, 0.8) 20%);
}
/*css*/
.experience:nth-child(4) .loadingbar{
    background: linear-gradient(-45deg, rgba(138, 248, 255, 0) 10%, rgba(138, 248, 255, 0.8) 20%);
}
/*php*/
.experience:nth-child(5) .loadingbar{
    background: linear-gradient(-45deg, rgba(138, 248, 255, 0) 20%, rgba(138, 248, 255, 0.8) 30%);
}
/*js*/
.experience:nth-child(6) .loadingbar{
    background: linear-gradient(-45deg, rgba(138, 248, 255, 0) 30%, rgba(138, 248, 255, 0.8) 40%);
}
/*sql*/
.experience:nth-child(7) .loadingbar{
    background: linear-gradient(-45deg, rgba(138, 248, 255, 0) 30%, rgba(138, 248, 255, 0.8) 40%);
}
/*bootstrap*/
.experience:nth-child(9) .loadingbar{
    background: linear-gradient(-45deg, rgba(138, 248, 255, 0) 25%, rgba(138, 248, 255, 0.8) 35%);
}
/*photoshop*/
.experience:nth-child(11) .loadingbar{
    background: linear-gradient(-45deg, rgba(138, 248, 255, 0) 30%, rgba(138, 248, 255, 0.8) 40%);
}
/*figma*/
.experience:nth-child(12) .loadingbar{
    background: linear-gradient(-45deg, rgba(138, 248, 255, 0) 30%, rgba(138, 248, 255, 0.8) 40%);
}
/*github*/
.experience:nth-child(13) .loadingbar{
    background: linear-gradient(-45deg, rgba(138, 248, 255, 0) 30%, rgba(138, 248, 255, 0.8) 40%);
}
/*english*/
.experience:nth-child(15) .loadingbar{
    background: linear-gradient(-45deg, rgba(138, 248, 255, 0) 50%, rgba(138, 248, 255, 0.8) 60%);
}
.experience{
    display: flex;
    align-items: center;
    flex-flow: row;
    justify-content: space-evenly;
    height: 30px;
}
.svg{
    width: 30px;
}

.contact{
    margin: 0 2em;
}
.contact i{
    margin: 0.5em;
    font-size: 1.5em;
}
@media (min-width: 768px){
    .timeline{
        width: 3%;
    }
    #boxtimeline{
        justify-content: center;
    }
    .timelinetext{
        width: auto;
    }
    body{
        align-items: center;
    }
}
@media (min-width: 1440px){
    .loadingbar{
        height: 50%;
    }
    h1{
        font-size: 0.6em;
    }



}
@media (min-width: 1920px){
*{
    text-align: center;
}
.timelinetext article{
    text-align: left;
}
.experience{
    font-size: 25px;
}
    .svg{
        width: 80px;
    }
    .loadingbar{
        height: 50%;
    }

    .arrow_down i{
        font-size: 30px;
    }
    #arrow_downz{
        font-size: 30px;
    }
    #svgEn{
        width: 40px;
        height: 40px;
    }
    #svgPs{
        width: 35px;
        height: 35px;
    }
}

